Sincronizado con GitHub

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -208,7 +208,8 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your JBossEWS (Apache/Tomcat) application on OpenShift de primera vez</h1>
+            
+            <h1>Ahora con GitHub Welcome to your JBossEWS (Apache/Tomcat) application on OpenShift de primera vez</h1>
           </hgroup>
 
 
